added som semantic.html

--- a/Semantic.html
+++ b/Semantic.html
@@ -5,6 +5,8 @@
   
    <meta charset="UTF-8">
    <meta name="viewport" content="width =device-width, initial-scale=1.0">
+   <meta name="description" content="Författare">
+   <meta name="Keyword" content="html,css,script">
    <title>kända Författare </title>
    <a href="https://google.com" rel="stylecheet"> <Google class="com"></Google></a>
 <style>  
